--- a/Client/package.json
+++ b/Client/package.json
@@ -13,12 +13,14 @@
     "@headlessui/react": "^2.0.3",
     "@headlessui/tailwindcss": "^0.2.0",
     "@tremor/react": "^3.16.2",
+    "axios": "^1.6.8",
     "embla-carousel-autoplay": "^8.0.0",
     "embla-carousel-react": "^8.0.0",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "sonner": "^1.4.41"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
