--- a/Client/package.json
+++ b/Client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.0.3",
     "@headlessui/tailwindcss": "^0.2.0",
+    "@reduxjs/toolkit": "^2.2.4",
     "@tremor/react": "^3.16.2",
     "axios": "^1.6.8",
     "embla-carousel-autoplay": "^8.0.0",
@@ -19,6 +20,7 @@
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.21.1",
     "sonner": "^1.4.41"
   },
